# FNF-Project

./: .gitignore  CMakeLists.txt  FNF-FanGame  Makefile  TODO.txt  error.txt  ubuntu_build.sh
assets/images/: testbuddy.xml
src/: Entity.cpp  Game.cpp  main.cpp  pch.hpp  tinyxml2.cpp
src/components/: AnimationComponent.cpp  PositionComponent.cpp  SpriteComponent.cpp
src/include/: Entity.hpp  Game.hpp  globals.hpp  types.hpp
src/include/components/: AnimationComponent.hpp  PositionComponent.hpp  SpriteComponent.hpp
src/include/states/: GameState.hpp  Playstate.hpp
src/states/: Playstate.cpp
